--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -2,8 +2,9 @@
   "name": "@axa/bautajs-fastify",
   "version": "3.0.2",
   "description": "A bautaJS fastify plugin. Allows auto exposing the bautaJS operations.",
-  "main": "dist",
+  "exports": "./dist",
   "types": "dist",
+  "type": "module",
   "files": [
     "dist"
   ],
