fix(bautajs): still does not work

--- a/packages/bautajs-fastify/package.json
+++ b/packages/bautajs-fastify/package.json
@@ -2,7 +2,7 @@
   "name": "@axa/bautajs-fastify",
   "version": "3.0.2",
   "description": "A bautaJS fastify plugin. Allows auto exposing the bautaJS operations.",
-  "exports": "./dist",
+  "exports": "./dist/index.js",
   "types": "dist",
   "type": "module",
   "files": [
