--- a/packages/bautajs-fastify-example/package.json
+++ b/packages/bautajs-fastify-example/package.json
@@ -2,7 +2,8 @@
   "name": "@axa/bautajs-fastify-example",
   "version": "3.0.2",
   "description": "A bautaJS example in fastify",
-  "main": "./server.js",
+  "type": "module",
+  "exports": "./dist/server.js",  
   "scripts": {
     "start": "LOG_LEVEL=info DEBUG=bautajs* node ./server.js",
     "test": "jest"
