fix(bautajs-express-example): pass express example to esm

--- a/packages/bautajs-express-example/package.json
+++ b/packages/bautajs-express-example/package.json
@@ -4,9 +4,10 @@
   "description": "A bautaJS example in express",
   "main": "./server.js",
   "scripts": {
-    "start": "LOG_LEVEL=info DEBUG=bautajs* node ./server.js",
-    "test": "jest"
+    "start": "LOG_LEVEL=info DEBUG=bautajs* NODE_DEBUG='esm' NODE_OPTIONS='--experimental-vm-modules --trace-warnings' node  ./server.js",
+    "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/axa-group/bauta.js"
