fix(bautajs-express): transform it to esm

--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -12,7 +12,7 @@
     "tsc": "tsc",
     "build": "tsc --build",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
-    "test": "jest"
+    "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
