--- a/packages/bautajs-core/package.json
+++ b/packages/bautajs-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-core",
-  "version": "3.1.0",
+  "version": "4.0.0-alpha.0",
   "description": "Bauta.js is an add-on for your Node.js applications such as Express.js or Fastify.",
   "exports": "./dist/index.js",
   "types": "dist",
@@ -48,6 +48,6 @@
     "quick-lru-cjs": "^5.2.1"
   },
   "devDependencies": {
-    "@axa/bautajs-dev-config": "^3.0.1"
+    "@axa/bautajs-dev-config": "^4.0.0-alpha.0"
   }
 }
