--- a/packages/bautajs-fastify-example/package.json
+++ b/packages/bautajs-fastify-example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axa/bautajs-fastify-example",
-  "version": "3.1.0",
+  "version": "4.0.0-beta.0",
   "description": "A bautaJS example in fastify",
   "main": "./server.js",
   "scripts": {
@@ -19,9 +19,9 @@
   ],
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@axa/bautajs-core": "^3.1.0",
-    "@axa/bautajs-datasource-rest": "^3.1.0",
-    "@axa/bautajs-fastify": "^3.1.0",
-    "fastify": "^4.15.0"
+    "@axa/bautajs-core": "^4.0.0-beta.0",
+    "@axa/bautajs-datasource-rest": "^4.0.0-beta.0",
+    "@axa/bautajs-fastify": "^4.0.0-beta.0",
+    "fastify": "^5.0.0"
   }
 }
