--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,13 +13,13 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version (semver) to release'
+        description: "Version (semver) to release"
         required: true
         type: string
       branch:
-        description: 'Base branch to release'
+        description: "Base branch to release"
         required: true
-        default: 'main'
+        default: "main"
         type: string
 
 jobs:
@@ -32,7 +32,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 24
           registry-url: https://registry.npmjs.org/
       - name: Install dependencies
         run: npm i
@@ -51,19 +51,19 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor}}@users.noreply.github.com"
-          npm run release ${{ inputs.version }}
+          npm run release -- ${{ inputs.version }}
 
   release:
     needs: publish
     if: |
       always() && 
       needs.publish.result == 'success'
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: 'Create GitHub release'
+      - name: "Create GitHub release"
         run: |
           gh release create v${{ inputs.version }} --verify-tag  --target ${{ inputs.branch}} -t 'v${{ inputs.version }}' --generate-notes
         env:
