--- a/lerna.json
+++ b/lerna.json
@@ -1,18 +1,10 @@
 {
-  "lerna": "3.13.0",
-  "packages": [
-    "packages/*"
-  ],
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "packages": ["packages/*"],
+  "version": "4.0.0-beta.0",
   "command": {
-    "bootstrap": {
-      "npmClientArgs": [
-        "--no-package-lock"
-      ],
-      "version": {
-        "message": "chore(release): %s"
-      }
+    "version": {
+      "message": "chore(release): %s"
     }
-  },
-  "useWorkspaces": true,
-  "version": "3.1.0"
+  }
 }
