--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "clean": "turbo run clean && rm -rf node_modules",
     "lint": "eslint \"*/**/*.{ts,js}\"",
     "test": "turbo run test",
-    "release": "lerna changed && lerna publish --no-changelog --yes --no-commit-hooks",
+    "release": "lerna changed && lerna publish -y",
     "checkDeps": "npx npm-check-updates -u && npm run lerna exec -- npx npm-check-updates -u",
     "build": "turbo run build",
     "prepare": "husky install"
@@ -65,7 +65,7 @@
     "jest-extended": "^3.2.4",
     "jest-junit": "^16.0.0",
     "jest-sonar-reporter": "^2.0.0",
-    "lerna": "^6.6.1",
+    "lerna": "^9.0.3",
     "nock": "^13.3.0",
     "node-mocks-http": "^1.12.2",
     "node-object-hash": "^2.3.10",
@@ -77,6 +77,9 @@
     "ts-jest": "^29.1.0",
     "turbo": "^1.9.3",
     "typescript": "~5.2.0"
+  },
+  "overrides": {
+    "tar": "^7.5.7"
   },
   "jestSonar": {
     "reportPath": "coverage",
