--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [24.x]
         os: [macos-latest, ubuntu-latest, windows-latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
@@ -38,7 +38,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: 'Dependency Review'
+      - name: "Dependency Review"
         uses: actions/dependency-review-action@v3
         with:
           fail-on-severity: high
@@ -74,7 +74,7 @@ jobs:
           echo "IS_MALWARE_DETECTED=$is_malware_detected" >> $GITHUB_ENV
 
       - name: Upload ClamAV scan results to an artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ClamAV_${{ github.sha }}
           path: scan.json
@@ -83,7 +83,7 @@ jobs:
       - name: Comment on the PR on malware detected
         if: ${{ env.IS_MALWARE_DETECTED == 'true' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_CLI_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh pr comment ${{ github.event.pull_request.number }} --body "🦠 Possible malware detected, please review it before merge this PR. ```$(cat scan.txt)```"
 
@@ -100,5 +100,5 @@ jobs:
           fetch-depth: 0
       - uses: gitleaks/gitleaks-action@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_CLI_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
