style: format lerna config

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "version": "4.0.0-beta.0",
   "command": {
     "version": {
